menu (2.1.45) unstable; urgency=low

  * The "unreleased release" 
  * Handling of l10n by Christian Perrier:
    + Programs translations:
      - Danish updated. Closes: #609583
  * su-to-root: add support for gksudo and kdesudo. Closes: #604085, #602118.
  * update-menus/update-menus.cc:
    + option --menufilesdir: do not require a trailing slash. Closes: #595032.
  * debian/prerm
    + Automatically remove generate system menu files when menu is removed.
      Closes: #305764, #592441.

 -- Bill Allombert <ballombe@debian.org>  Mon, 07 Mar 2011 11:58:39 +0100

menu (2.1.44) unstable; urgency=low

  * The "Bordeaux" release.
  * Handling of l10n by Christian Perrier:
    + Menu sections translations:
      - Estonian added. Closes: #582243
    + Programs translations:
      - Estonian added.
    + su-to-root translations:
      - Estonian added.
  * debian/control: 
    - Suggests menu-l10n.
    - Bump Standards-Version to 3.9.1.
  * Fix spelling error in /usr/share/menu/README.
    Thanks to Filipus Klutiero. Closes: #592114

 -- Bill Allombert <ballombe@debian.org>  Mon, 06 Sep 2010 16:48:27 +0200

menu (2.1.43) unstable; urgency=low

  * The "Javier Jugendtraum" release.
  * menu repository on alioth.debian.org converted to subversion
  * doc/su-to-root.1:
    + Fix typo. Closes: #552153. Thanks Filipus Klutiero.
  * doc/menu.sgml:
    + Mention that the new menu structure was drafted by Linas Zvirblis.
  * install-menu/functions.cc, install-menu/install-menu.cc:
    + Add support for translation of menu entries in gettext domain 
     'menu-entries'. Translations will be provided by the menu-l10n package.
      Closes: #37716
  * update automake-related scripts.

 -- Bill Allombert <ballombe@debian.org>  Sun, 24 Jan 2010 13:08:52 +0100

menu (2.1.42) unstable; urgency=low

  * The "answer to life, the universe and menu" release.
  * Handling of l10n by Christian Perrier:
    + Menu sections translations:
      - Asturian added. Closes: #511622